[package]
name = "slowlock"
version = "0.1.0"
authors = ["Richard Sunderland <798934+rimasu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.4.1"
rust-argon2 = "0.8.3"
sysinfo = "0.17.3"
log = { version = "0.4.14", optional = true }

[features]
logging = ["log"]

[dev-dependencies]
aes-gcm = "0.9.1"
simple_logger = "1.11.0"
hex-literal = "0.3.1"