[package]
name = "slowlock"
version = "0.1.0"
authors = ["Richard Sunderland <798934+rimasu@users.noreply.github.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "SlowLock convenience wrapper for processing cipher password with a proof of work function"
keywords = ["aead", "argon2", "proof", "work"]
documentation = "https://docs.rs/slowlock/"
homepage = "https://github.com/rimasu/slowlock"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.4.1"
rust-argon2 = "0.8.3"
sysinfo = "0.17.3"
log = { version = "0.4.14", optional = true }

[features]
logging = ["log"]
default = ["logging"]

[dev-dependencies]
aes-gcm = "0.9.1"
simple_logger = "1.11.0"
hex-literal = "0.3.1"